# mcp4mcp

./: .replit  Dockerfile  MANIFEST.in  README.md  build_package.ps1  codebase.md  docker_build.ps1  install.sh  llm.py  main.py  out.txt  pyproject.toml  release.ps1  run_diagnostic.py  server.py  test_runner.py  verify.ps1
.github/workflows/: auto-release.yml  publish.yml  test-pypi.yml  test.yml
attached_assets/: Pasted--mcp4mcp-Project-Structure-Build-Plan-Project-Overview-mcp4mcp-A-Meta-MCP-Server-that--1751656446363_1751656446363.txt
examples/: demo_usage.py
examples/example_project/: __init__.py  server.py  tools.py
mcp4mcp/: __init__.py  models.py  storage.py
mcp4mcp/analyzers/: __init__.py  code_scanner.py  similarity.py
mcp4mcp/tools/: __init__.py  intelligence.py  state_management.py  tracking.py
mcp4mcp/utils/: helpers.py
prompts/: mcp.md  vision.md
tests/: __init__.py  test_models.py  test_server.py  test_storage.py  test_tools.py
