
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp4mcp"
version = "0.1.0"
description = "Meta MCP Server for MCP development intelligence"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.19.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
