[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp4mcp"
version = "0.1.0"
description = "Meta MCP Server for MCP development intelligence"
authors = [{name = "Matt Hornung", email = "hornung.m1@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[project.urls]
"Homepage" = "https://github.com/hmatt1/mcp4mcp"
"Bug Reports" = "https://github.com/hmatt1/mcp4mcp/issues"
"Source" = "https://github.com/hmatt1/mcp4mcp"

[project.scripts]
mcp4mcp = "main:main"
mcp4mcp-server = "server:main"

[tool.hatch.version]
path = "mcp4mcp/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/mcp4mcp",
    "/README.md",
    "/LICENSE",
    "/UNLICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp4mcp"]
